src/pages/settings/helpCenter/components/ConnectToShopSection/ConnectToShopSection.less
:local {
    .modal-centered {
        top: 50%;
        transform: translateY(-50%) !important;
        max-width: 600px;
    }

    .select-option {
        display: flex;
        align-items: center;
    }

    .shopify-icon {
        width: 20px;
        margin-right: 10px;
    }

    .select-default {
        color: var(--neutral-grey-4);
    }

    .select-connected-chats {
        margin-left: auto;
        color: var(--neutral-grey-4);
    }

    .connected-store {
        background: var(--neutral-grey-1);
        padding: 8px;
        display: flex;
        align-items: center;
    }

    .disconnect-button {
        color: var(--neutral-grey-4);
        cursor: pointer;

        &:hover {
            color: var(--feedback-error);
        }
    }

    .store-name {
        color: var(
            --classic-neutral-grey-6,
            var(--classic-neutral-grey-6, #1d365c)
        );
        font-weight: bold;
    }

    .selectStoreLabel {
        font-weight: 400;
        font-size: 14px;
        margin-bottom: 8px;
    }

    .connectDescription {
        margin-bottom: 24px;
        letter-spacing: -0.01em;
    }

    .title {
        font-weight: 600;
    }

    .alert {
        margin: 16px 0;
    }
}

